samples/_failures_safe/1761322372_29e9ff_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_751c8f8c.c: In function ‘main’:
./samples/SAFE/__tmp_751c8f8c.c:146:5: error: expected expression at end of input
  146 |     printf("%s\n",
      |     ^~~~~~
./samples/SAFE/__tmp_751c8f8c.c:146:5: error: expected declaration or statement at end of input
